<?xml version="1.0" encoding="UTF-8"?>
<!--
  #%L
  wcm.io
  %%
  Copyright (C) 2015 wcm.io
  %%
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  #L%
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>io.wcm.caravan</groupId>
    <artifactId>io.wcm.caravan.jaxrs.parent</artifactId>
    <version>1.2.1-SNAPSHOT</version>
    <relativePath>../../parent/pom.xml</relativePath>
  </parent>

  <groupId>io.wcm.caravan</groupId>
  <artifactId>io.wcm.caravan.jaxrs.integration-test.launchpad-test</artifactId>
  <version>1-SNAPSHOT</version>

  <name>JAX-RS Integration Test Launchpad Test</name>
  <description>
    Builds a bundle with Sling server-side tests, and executes them via
    a remote test proxy that runs in the integration-tests phase.
  </description>

  <properties>
    <!-- Java version -->
    <java.version>17</java.version>

    <!-- Sling Starter version -->
    <sling.starter.version>14-SNAPSHOT</sling.starter.version>

    <!-- start with -DkeepITServerRunning=true to allow to rerun ITs or inspect the server after the ITs have been executed there -->
    <starter.min.bundles.count>200</starter.min.bundles.count>
    <it.startTimeoutSeconds>60</it.startTimeoutSeconds>
  </properties>

  <dependencies>

    <!-- Additional bundles needed by the Sling instance under test -->    
    <dependency>
      <groupId>org.apache.sling</groupId>
      <artifactId>org.apache.sling.junit.teleporter</artifactId>
      <version>1.1.0</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>commons-io</groupId>
          <artifactId>commons-io</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <!-- Dependencies for the Test Build and Run -->
    <dependency>
        <groupId>org.apache.sling</groupId>
        <artifactId>org.apache.sling.commons.testing</artifactId>
        <version>2.2.0</version>
        <scope>compile</scope>
        <exclusions>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
          </exclusion>
          <exclusion>
            <groupId>junit</groupId>
            <artifactId>junit-dep</artifactId>
          </exclusion>
          <exclusion>
            <groupId>asm</groupId>
            <artifactId>asm</artifactId>
          </exclusion>
          <exclusion>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.apache.jackrabbit</groupId>
            <artifactId>jackrabbit-api</artifactId>
          </exclusion>
        </exclusions>
    </dependency>
    <dependency>
      <groupId>jakarta.json</groupId>
      <artifactId>jakarta.json-api</artifactId>
      <version>2.0.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.johnzon</groupId>
      <artifactId>johnzon-core</artifactId>
      <version>2.0.2</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient-osgi</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpcore-osgi</artifactId>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <plugins>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <executions>
          <!-- Find free ports to run our server -->
          <execution>
            <id>reserve-network-port</id>
            <goals>
              <goal>reserve-network-port</goal>
            </goals>
            <phase>initialize</phase>
            <configuration>
              <portNames>
                <!-- reserved port must be stored in property because it must be passed to the feature-launcher-maven-plugin -->
                <portName>http.port</portName>
              </portNames>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.sling</groupId>
        <artifactId>slingfeature-maven-plugin</artifactId>
        <version>1.9.2</version>
        <extensions>true</extensions>

        <configuration>
          <replacePropertyVariables>apache-cxf-version</replacePropertyVariables>
          <skipAddFeatureDependencies>true</skipAddFeatureDependencies>
          <aggregates>
            <aggregate>
              <classifier>app</classifier>
              <filesInclude>*.json</filesInclude>
              <includeArtifact>
                <groupId>org.apache.sling</groupId>
                <artifactId>org.apache.sling.starter</artifactId>
                <classifier>nosample_base</classifier>
                <version>${sling.starter.version}</version>
                <type>slingosgifeature</type>
              </includeArtifact>
              <includeArtifact>
                <groupId>org.apache.sling</groupId>
                <artifactId>org.apache.sling.starter</artifactId>
                <classifier>oak_persistence_sns</classifier>
                <version>${sling.starter.version}</version>
                <type>slingosgifeature</type>
              </includeArtifact>
              <includeArtifact>
                <groupId>org.apache.sling</groupId>
                <artifactId>org.apache.sling.starter</artifactId>
                <classifier>junit</classifier>
                <version>${sling.starter.version}</version>
                <type>slingosgifeature</type>
              </includeArtifact>
            </aggregate>
          </aggregates>
          <scans>
            <scan>
              <includeClassifier>app</includeClassifier>
            </scan>
          </scans>
        </configuration>
        <executions>
          <execution>
            <id>prepare-features</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>aggregate-features</goal>
              <goal>analyse-features</goal>
              <goal>attach-features</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- launch the Sling instances to test -->
      <plugin>
        <groupId>org.apache.sling</groupId>
        <artifactId>feature-launcher-maven-plugin</artifactId>
        <version>1.0.0</version>
        <configuration>
          <launches>
            <launch>
              <id>sling-starter-oak-tar</id>
              <feature>
                <groupId>io.wcm.caravan</groupId>
                <artifactId>io.wcm.caravan.jaxws.integration-test.launchpad-test</artifactId>
                <version>1-SNAPSHOT</version>
                <classifier>app</classifier>
                <type>slingosgifeature</type>
              </feature>
              <launcherArguments>
                <vmOptions>
                  <value>--add-opens java.base/java.lang=ALL-UNNAMED</value>
                  <value>--add-opens java.base/java.net=ALL-UNNAMED</value>
                </vmOptions>
                <frameworkProperties>
                  <org.osgi.service.http.port>${http.port}</org.osgi.service.http.port>
                  <org.apache.felix.http.jetty.responseBufferSize>5000000</org.apache.felix.http.jetty.responseBufferSize>
                </frameworkProperties>
              </launcherArguments>
              <startTimeoutSeconds>${it.startTimeoutSeconds}</startTimeoutSeconds>
            </launch>
          </launches>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>start</goal>
              <goal>stop</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- run the ITs -->
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <configuration>
          <systemPropertyVariables>
            <launchpad.http.server.url>http://localhost:${http.port}</launchpad.http.server.url>
            <starter.http.test.ports>false:${http.port}</starter.http.test.ports>
            <starter.min.bundles.count>${starter.min.bundles.count}</starter.min.bundles.count>
            <!-- Comma-separated list of paths to check for 200 status -->
            <starter.check.paths>
              /system/console/bundles,
            </starter.check.paths>
          </systemPropertyVariables>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- do not deploy this hierarchy pom into maven repository -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>

      <!-- do not generate site for this project -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <configuration>
          <skip>true</skip>
          <skipDeploy>true</skipDeploy>
        </configuration>
      </plugin>
      
      <!-- do not generate javadocs -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
      
    </plugins>
  </build>
  
  <profiles>

    <!-- This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
    <profile>
      <id>only-eclipse</id>
      <activation>
        <property>
          <name>m2e.version</name>
        </property>
      </activation>
      <build>
        <pluginManagement>
          <plugins>
            <plugin>
              <groupId>org.eclipse.m2e</groupId>
              <artifactId>lifecycle-mapping</artifactId>
              <version>1.0.0</version>
              <configuration>
                <lifecycleMappingMetadata>
                  <pluginExecutions>
                    <pluginExecution>
                      <pluginExecutionFilter>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <versionRange>[1.9.1,)</versionRange>
                        <goals>
                          <goal>reserve-network-port</goal>
                        </goals>
                      </pluginExecutionFilter>
                      <action>
                        <ignore></ignore>
                      </action>
                    </pluginExecution>
                  </pluginExecutions>
                </lifecycleMappingMetadata>
              </configuration>
            </plugin>
          </plugins>
        </pluginManagement>
      </build>
    </profile>

    <!-- "Fast" profile for quick compile of the project without any unit tests etc. -->
    <profile>
      <id>fast</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <properties>
        <unittests.skip>true</unittests.skip>
        <integrationtests.skip>true</integrationtests.skip>
        <maven.javadoc.skip>true</maven.javadoc.skip>
      </properties>
    </profile>

    <!-- Start on port 8080 and keep running -->
    <profile>
      <id>run8080</id>
      <properties>
        <launchpad.keep.running>true</launchpad.keep.running>
        <launchpad.debug>true</launchpad.debug>
        <http.port>8080</http.port>
      </properties>            
    </profile>

  </profiles>

</project>
